varie modifiche, vedi di seguito...
-cambiati id campi nelle finestre modali

-aggiunto validator anagrafiche

-aggiunto blocco del campo cf e cv per il lookup

-cambiati tutti i click chiusura modale in js con apposita funzione per
evitare contrasto con la modifica seguente

-onclick del pulsante (+) per l'aggiunta di anagrafiche pulisce il
binding con una nuova anagrafica nel wrapper, magari bindata con
precedenti lookup per evitare modifiche strane 

-inserite chiamate alla pulizia del form modale di aggiunta anagrafica
alla chiusura di questa

-implementato template e wrapperino per la gestione di errori e
validator in ritorno in una chiamata AJAX

--- a/src/main/resources/templates/evento/eventoFADEdit.html
+++ b/src/main/resources/templates/evento/eventoFADEdit.html
@@ -1409,7 +1409,7 @@
 				}
 
 				function closeModaleAddAttivitaTo(){
-					$("#add-attivitaFAD-modal .close").click();
+					$("#add-attivitaFAD-modal").modal("hide");
 					$("#add-attivitaFAD-modal form")[0].reset();
 
 					$('#tempAttivitaFAD\\.orarioInizio').val('');
