--- a/src/main/resources/templates/evento/eventoRESEdit.html
+++ b/src/main/resources/templates/evento/eventoRESEdit.html
@@ -1993,7 +1993,7 @@
 				}
 
 				function closeModaleAddAttivitaTo(){
-					$("#add-attivitaRES-modal .close").click();
+					$("#add-attivitaRES-modal").modal("hide");
 					$("#add-attivitaRES-modal form")[0].reset();
 
 					$('#tempAttivitaRES\\.orarioInizio').val('');
