--- a/src/main/resources/templates/evento/eventoFADEdit.html
+++ b/src/main/resources/templates/evento/eventoFADEdit.html
@@ -1043,7 +1043,7 @@
 											</label>
 												<div th:unless="${isRiedizione or isEditSemiBloccato}" class="model-link">
 												<i class="fa fa-file-text"></i>
-												<a class="autocertificazione_modello" th:text="#{label.esempio_modello}" href="todo"></a>
+												<a class="autocertificazione_modello" target="_blank" th:text="#{label.esempio_modello}" href="todo"></a>
 											</div>
 											<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 												<!-- <th:block th:include="fragments/allegati :: allegati(eventoWrapper, false, autocertificazioneAssenzaAziendeAlimentiPrimaInfanzia, null, null, null, true, null, false)" ></th:block> -->
@@ -1188,7 +1188,7 @@
 									</label>
 										<div th:unless="${isRiedizione or isEditSemiBloccato}" class="model-link">
 										<i class="fa fa-file-text"></i>
-										<a class="autocertificazione_modello" th:text="#{label.esempio_modello}" href="todo"></a>
+										<a class="autocertificazione_modello" target="_blank" th:text="#{label.esempio_modello}" href="todo"></a>
 									</div>
 									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 										<!-- <th:block th:include="fragments/allegati :: allegati(eventoWrapper, false, dichiarazioneAssenzaConflittoInteresse, null, null, null, false, null, false)" ></th:block> -->
