--- a/src/main/resources/templates/evento/eventoFSCEdit.html
+++ b/src/main/resources/templates/evento/eventoFSCEdit.html
@@ -1123,7 +1123,7 @@
 											</label>
 												<div th:unless="${isRiedizione or isEditSemiBloccato}" class="model-link">
 												<i class="fa fa-file-text"></i>
-												<a class="autocertificazione_modello" th:text="#{label.esempio_modello}" href="todo"></a>
+												<a class="autocertificazione_modello" target="_blank" th:text="#{label.esempio_modello}" href="todo"></a>
 											</div>
 											<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 												<!-- <th:block th:include="fragments/allegati :: allegati(eventoWrapper, false, autocertificazioneAutorizzazioneMinisteroSalute, null, null, null, true, null, false)" ></th:block> -->
@@ -1146,7 +1146,7 @@
 											</label>
 												<div th:unless="${isRiedizione or isEditSemiBloccato}" class="model-link">
 												<i class="fa fa-file-text"></i>
-												<a class="autocertificazione_modello" th:text="#{label.esempio_modello}" href="todo"></a>
+												<a class="autocertificazione_modello" target="_blank" th:text="#{label.esempio_modello}" href="todo"></a>
 											</div>
 											<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 												<!-- <th:block th:include="fragments/allegati :: allegati(eventoWrapper, false, autocertificazioneAssenzaAziendeAlimentiPrimaInfanzia, null, null, null, true, null, false)" ></th:block> -->
@@ -1218,7 +1218,7 @@
 										</label>
 											<div th:unless="${isRiedizione or isEditSemiBloccato}" class="model-link">
 											<i class="fa fa-file-text"></i>
-											<a class="autocertificazione_modello" th:text="#{label.esempio_modello}" href="todo"></a>
+											<a class="autocertificazione_modello" target="_blank"  th:text="#{label.esempio_modello}" href="todo"></a>
 										</div>
 										<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 											<!-- <th:block th:include="fragments/allegati :: allegati(eventoWrapper, false, autocertificazioneAssenzaFinanziamenti, null, null, null, true, null, false)" ></th:block> -->
@@ -1287,7 +1287,7 @@
 									</label>
 										<div th:unless="${isRiedizione or isEditSemiBloccato}" class="model-link">
 										<i class="fa fa-file-text"></i>
-										<a class="autocertificazione_modello" th:text="#{label.esempio_modello}" href="todo"></a>
+										<a class="autocertificazione_modello" target="_blank" th:text="#{label.esempio_modello}" href="todo"></a>
 									</div>
 									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 										<!-- <th:block th:include="fragments/allegati :: allegati(eventoWrapper, false, dichiarazioneAssenzaConflittoInteresse, null, null, null, false, null, false)" ></th:block> -->
