--- a/src/main/resources/templates/persona/personaFragment.html
+++ b/src/main/resources/templates/persona/personaFragment.html
@@ -520,7 +520,7 @@
 						<div th:unless="${personaWrapper.persona.delegatoLegaleRappresentante}">
 							<div th:if="${editabile}" class="divider-dashed"></div>
 
-							<div th:if="${editabile}" class="model-link" id="atto_nomina_esempio_link">
+							<div th:if="${editabile}" class="model-link" id="atto_nomina_esempio">
 								<i class="fa fa-file-text"></i>
 								<a id="atto_nomina_esempio_link" target="_blank" th:text="#{label.esempio_modello}" href="http://ecm.veneto.agenas.it/documenti/8.Atto_di_nomina.pdf"></a>
 							</div>
