--- a/src/main/resources/templates/relazioneAnnuale/relazioneAnnualeFragment.html
+++ b/src/main/resources/templates/relazioneAnnuale/relazioneAnnualeFragment.html
@@ -309,7 +309,11 @@
 									<span th:text="#{label.relazioneFinale}">Relazione Finale</span>
 									<span class="required" id="brochure-obbligatoria">*</span>
 								</label>
-								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+								<div th:if="${editabile}" class="model-link" id="relazione_annuale_esempio">
+									<i class="fa fa-file-text"></i>
+									<a id="relazione_annuale_esempio_link" target="_blank" th:text="#{label.esempio_modello}" href="http://ecm.veneto.agenas.it/documenti/relazione_annuale.pdf"></a>
+								</div>
+								<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 									<!-- <th:block th:include="fragments/allegati :: allegati(relazioneAnnualeWrapper, false, relazioneFinale, null, null, null, true, null, true)" ></th:block> -->
 									<th:block th:include="fragments/allegatiext :: allegatiext(relazioneAnnualeWrapper, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_RELAZIONE_FINALE}', relazioneFinale, null, null, null, true, 'edit', true)" ></th:block>
 								</div>
